--- a/src/styles/general/layout.scss
+++ b/src/styles/general/layout.scss
@@ -1,7 +1,13 @@
+@use "@/styles/_mixins.scss" as *;
+
 html {
-  font-size: 16px;
+  font-size: 14px;
   scroll-behavior: smooth;
   font-family: sans-serif;
+
+  @include breakpoint-up() {
+    font-family: 14px;
+  }
 }
 
 body {
